--- a/test/demo1echart.html
+++ b/test/demo1echart.html
@@ -26,7 +26,7 @@
 
 
 
-    //计算两个日期相差天数
+    //计算两个日期相差天数as
     function  DateDiff(sDate1,sDate2){
         //sDate1和sDate2是2006-12-18格式
         var aDate,oDate1,oDate2,iDays;
