--- a/ts_demo/index.html
+++ b/ts_demo/index.html
@@ -13,7 +13,7 @@
 <body>
   <h1 class="text-center">11</h1>
   
-  <script src="./node_modules/jquery/dist/jquery.min.js"></script>
+  <script src="./node_modules/@types/jquery/dist/jquery.slim.d.ts"></script>
   <script src="./src/index.js"></script>
 </body>
 
